--- a/Python Refresher_Beginner.ipynb
+++ b/Python Refresher_Beginner.ipynb
@@ -2,6 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d14b1d16-855d-41c3-a780-3b8b46d78d6e",
+   "metadata": {},
+   "source": [
+    "### Python Training Program\n",
+    "\n",
+    "- Programming Basics\n",
+    "- Introduction to Python Programming\n",
+    "- Python Data Types and Operators\n",
+    "- Conditional Statements and Loops\n",
+    "- Python Functions\n",
+    "- Fundamentals of NumPy Library\n",
+    "- Working With Pandas\n",
+    "- Statistics Fundamentals\n",
+    "- Transition from Excel VBA to Python\n",
+    "- Overview of Python Libraries for Excel Automation(openpyxl, pandas)\n",
+    "- Creating Python-based Excel Plugins/Add-ins\n",
+    "- Advanced Excel Integration\t\n",
+    "- Creating Custom Excel Plugins to Execute Python Scripts:\n",
+    "- Integrating Dashboards and Advanced Visualizations with Python & Excel\n",
+    "- Automating Data Fetching with APIs\t\n",
+    "- Parsing and Processing JSON/XML Data: \n",
+    "- Integrating API Data with Excel\n",
+    "- Optical character recognition\t\n",
+    "- Data Extraction from PDFs\t\n",
+    "- Version Control with Git\t\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6678b456-3aaa-411d-b2e3-df1901b757a6",
    "metadata": {},
    "source": [
