--- a/Python Refresher_Beginner.ipynb
+++ b/Python Refresher_Beginner.ipynb
@@ -1634,6 +1634,78 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bee9fb7a-f390-4f4c-bfdd-8293ddfb3a64",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "\n",
+    "### Python Revision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fb1ccc7-8d3c-4bb0-8d70-0612e2659f44",
+   "metadata": {},
+   "source": [
+    "###### Ex. WAP to take name of book as input from user and check if it is present in the inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7acfd1bb-301f-4fa0-b7c9-bdd8936d691b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "available_books = [\"Python 101\", \"Data Science Handbook\", \"Machine Learning\", \"Deep Learning\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb60452a-3d9b-4469-b5a5-b09e7589ece4",
+   "metadata": {},
+   "source": [
+    "###### Ex. WAP to calculate total amount credited to the account and total amount debited from account based on following transactions - "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bda4ef9-9a9c-4cd8-a9e4-0dc72db3e39c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions = [2000, -500, 1500, -1200, -100, 3000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f71a0651-0cd8-41a1-a9fb-1d8dc6a56517",
+   "metadata": {},
+   "source": [
+    "###### Ex. WAP to display the names of the products which are out of stock from the given inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e16bfd7d-878b-4e2d-9865-1de7a9b784fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory = {\"Shoes\": 10, \"Bags\": 5, \"Watches\": 0, \"Belts\": 3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57e0c1ce-83dd-4578-9826-bd72680a7c3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "2d9ef43d-57f3-4c11-ac44-14b8fbf31d71",
    "metadata": {},
    "source": [
