--- a/Day 1 and Day 2.ipynb
+++ b/Day 1 and Day 2.ipynb
@@ -3482,6 +3482,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "d80ec026-7f84-46be-b774-9749903c9496",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "print(\"Success\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a78c105-909c-4c7c-8d48-cfb8d186a3fb",
    "metadata": {},
