--- a/Day 1 and Day 2.ipynb
+++ b/Day 1 and Day 2.ipynb
@@ -3510,6 +3510,71 @@
    "source": [
     "<hr><hr>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3c0aecd4-c515-4809-a7cb-edc7812b17f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__add__', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getnewargs__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mod__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__rmod__', '__rmul__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5d401bca-5a88-44e4-9f31-9c4d2f472256",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method_descriptor:\n",
+      "\n",
+      "title(self, /) unbound builtins.str method\n",
+      "    Return a version of the string where each word is titlecased.\n",
+      "\n",
+      "    More specifically, words start with uppercased characters and all remaining\n",
+      "    cased characters have lower case.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(str.title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2e660554-d811-4c75-b7d2-ce6d2e62b25d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function len in module builtins:\n",
+      "\n",
+      "len(obj, /)\n",
+      "    Return the number of items in a container.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(len)"
+   ]
   }
  ],
  "metadata": {
