--- a/Day - 7.ipynb
+++ b/Day - 7.ipynb
@@ -9,14 +9,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Importing pandas and related libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,90 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Revenue</th>\n",
-       "      <th>Sales</th>\n",
-       "      <th>Stock Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-09</td>\n",
-       "      <td>1007450.71</td>\n",
-       "      <td>58406.47</td>\n",
-       "      <td>5853.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-06-10</td>\n",
-       "      <td>997926.04</td>\n",
-       "      <td>64990.70</td>\n",
-       "      <td>5404.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-06-11</td>\n",
-       "      <td>1009715.33</td>\n",
-       "      <td>82831.01</td>\n",
-       "      <td>5593.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-06-12</td>\n",
-       "      <td>1022845.45</td>\n",
-       "      <td>66873.38</td>\n",
-       "      <td>6412.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-06-13</td>\n",
-       "      <td>996487.70</td>\n",
-       "      <td>92532.67</td>\n",
-       "      <td>7168.93</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Date     Revenue     Sales  Stock Price\n",
-       "0 2023-06-09  1007450.71  58406.47      5853.68\n",
-       "1 2023-06-10   997926.04  64990.70      5404.64\n",
-       "2 2023-06-11  1009715.33  82831.01      5593.63\n",
-       "3 2023-06-12  1022845.45  66873.38      6412.00\n",
-       "4 2023-06-13   996487.70  92532.67      7168.93"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create sample data\n",
     "sample_data = {\n",
@@ -199,7 +120,7 @@
     "def agg_by_period(df, date_col, metric_col, period = \"M\", agg = \"mean\") :\n",
     "    result = df[[date_col, metric_col]].copy()  # Creating a copy of the dataframe\n",
     "    result[\"Period\"] = df[date_col].dt.to_period(period).dt.to_timestamp()\n",
-    "    return result.groupby(\"Period\")[metric_col].agg(agg).round(2)\n",
+    "    return result.groupby(\"Period\", as_index = False)[metric_col].agg(agg).round(2)\n",
     "agg_by_period(df, \"Date\", \"Sales\", \"Q\")"
    ]
   },
@@ -217,14 +138,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_rolling_average(df, date_col, metric_col, window = 7) :\n",
+    "    data = df[[date_col, metric_col]].copy()\n",
+    "    data[date_col] = pd.to_datetime(df[date_col])\n",
+    "    data = data.sort_values(by = date_col)\n",
+    "    data[f'{metric_col}_rolling_{window}d'] = df[metric_col].rolling(window).mean().round(2)\n",
+    "    return data\n",
+    "calculate_rolling_average(df, \"Date\", \"Sales\", 5)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "###### Ex. Percent change calculation - \n",
-    "Write a function `calculate_pct_change(df, date_col, metric_col)` that converts `date_col` to datetime, sorts the DataFrame, and calculates the percentage change in `metric_col`. It adds the result as a new column `<metric_col>_pct_change` and returns the updated DataFrame.\n"
+    "Write a function `calculate_pct_change(df, date_col, metric_col)` that converts `date_col` to datetime, sorts the DataFrame, and calculates the percentage change in `metric_col`. It adds the result as a new column `<metric_col>_pct_change` and returns the updated DataFrame.\n",
+    "- Calculate pct_change based on period mentioned as argument\n"
    ]
   },
   {
@@ -232,7 +162,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_pct_change(df, date_col, metric_col, period = None, agg = \"mean\") :\n",
+    "    data = df[[date_col, metric_col]].copy()    \n",
+    "   \n",
+    "    if period in (\"Y\", \"M\", \"Q\"):\n",
+    "        data[\"Period\"]=  data[date_col].dt.to_period(period).dt.to_timestamp()\n",
+    "        data = data.groupby(\"Period\", as_index = False)[metric_col].agg(agg)\n",
+    "    \n",
+    "    else:\n",
+    "        data[\"Period\"] = pd.to_datetime(df[date_col])\n",
+    "\n",
+    "    data = data.sort_values(by = \"Period\")\n",
+    "    data[f\"{metric_col}_pct_change\"] = (data[metric_col].pct_change() * 100).round(2)\n",
+    "    data[f\"{metric_col}_pct_change_Str\"] = (data[metric_col].pct_change() * 100).round(2).fillna(0).astype(str) + \"%\"\n",
+    "    return data\n",
+    "calculate_pct_change(df, \"Date\", \"Revenue\", period = \"Y\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -248,7 +194,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def filter_last_n_days(df, date_col, n_days = 5) :\n",
+    "    data = df.copy()\n",
+    "    df[date_col] = pd.to_datetime(df[date_col])\n",
+    "    cutoff = pd.Timestamp.today() - pd.Timedelta(days = n_days)\n",
+    "    return data[data[date_col] >= cutoff]\n",
+    "filter_last_n_days(df, \"Date\", n_days=10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -340,7 +293,17 @@
    "outputs": [],
    "source": [
     "text = \"India celebrates its independence day on 15th August\"\n",
-    "re.match(r\"[A-z]+\\b\", text)  # returns a match object"
+    "re.match(r\"[A-z]+\", text)  # returns a match object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match = re.match(r\"[A-z]+\", text)\n",
+    "match.group()"
    ]
   },
   {
@@ -409,18 +372,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matched Text: 15\n",
-      "Start Position: 41\n",
-      "End Position: 43\n",
-      "Span: (41, 43)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example - \n",
     "\n",
@@ -507,7 +459,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"The stock price was 456 yesterday. Today, it rose to 564\"\n"
+    "text = \"The stock price was 456 yesterday. Today, it rose to 564\"\n",
+    "re.findall(r\"\\d\", text)"
    ]
   },
   {
@@ -523,7 +476,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"The stock price was 456 yesterday. Today, it rose to 564\"\n"
+    "text = \"The stock price was 456 yesterday. Today, it rose to 564\"\n",
+    "re.findall(r\"\\d+\", text)"
    ]
   },
   {
@@ -539,7 +493,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"On 25th March, the company declared 17% dividend.\"\n"
+    "text = \"On 25th March, the company declared 17% dividend.\"\n",
+    "re.findall(r\"\\d+%\", text)"
    ]
   },
   {
@@ -555,7 +510,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"Stocks like AAPL GOOGL BMW are the preferred ones\"\n"
+    "text = \"Stocks like AAPL GOOGL BMW are the preferred ones\"\n",
+    "re.findall(r\"[A-Z]\", text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"Stocks like AAPL GOOGL BMW are the preferred ones\"\n",
+    "re.findall(r\"[A-Z]{4}\", text) # 4 upper case letters together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"Stocks like AAPL, GOOGL, BMW are the preferred ones\"\n",
+    "re.findall(r\"[A-Z]{3,4}\", text) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"Stocks like AAPL GOOGL BMW are the preferred ones\"\n",
+    "re.findall(r\"[A-Z]+\\b\", text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"Stocks like AAPL GOOGL BMW are the preferred ones\"\n",
+    "replace = {\"AAPL\" : \"Apple\", \"GOOGL\" : \"Google\"}\n",
+    "re.sub(r\"[A-Z]+\\b\", repl, text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repl(mth_o) :\n",
+    "    string = mth_o.group()\n",
+    "    return replace.get(string, string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re.sub(r\"[A-Z]+\\b\", lambda mtch_o : replace.get(mtch_o.group(), mtch_o.group()), text)"
    ]
   },
   {
@@ -712,7 +729,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pdf = pdfplumber.open(r\"data_pdf_1.pdf\")\n",
+    "for page in pdf.pages :\n",
+    "    print(page.extract_table(), \"\\n -------------- \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "for page in pdf.pages :\n",
+    "    df = pd.concat((df, pd.DataFrame(page.extract_table())), ignore_index=True)\n",
+    "df.columns = df.iloc[0]\n",
+    "df = df.drop(index = 0).reset_index(drop= True)\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -731,9 +766,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pdf = pdfplumber.open(r\"data_pdf_2.pdf\")\n",
+    "for page in pdf.pages :\n",
+    "    print(page.extract_text(), \"\\n -------------- \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Using basic list and str handling\n",
+    "pdf = pdfplumber.open(r\"data_pdf_2.pdf\")\n",
+    "lines = []\n",
+    "for page in pdf.pages :\n",
+    "    lines.extend(page.extract_text().split(\"\\n\"))\n",
+    "header = lines[0].split()\n",
+    "data = [line for line in lines[1:] if re.match(r\"\\d{5}\", line.strip())]\n",
+    "\n",
+    "def clean_data(string) :\n",
+    "    parts = string.split()\n",
+    "    return [parts[0], \" \".join(parts[1:4]), parts[4], \" \".join(parts[5:7]), *parts[7:]]\n",
+    "\n",
+    "df1 = pd.DataFrame(map(clean_data, data), columns = header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using regular expression\n",
+    "pdf = pdfplumber.open(r\"data_pdf_2.pdf\")\n",
+    "lines = []\n",
+    "for page in pdf.pages :\n",
+    "    lines.extend(page.extract_text().split(\"\\n\"))\n",
+    "header = lines[0].split()\n",
+    "data = [line for line in lines[1:] if re.match(r\"\\d{5}\", line.strip())]\n",
+    "\n",
+    "def clean_data(string) :\n",
+    "    pattern = r'^(\\d+)\\s+(.+?)\\s+([A-Za-z]+)\\s+(Q\\d\\s+\\d{2}|FY\\s+\\d{2})\\s+(\\d{2}-\\d{2}-\\d{4})\\s+(\\d{2}-\\d{2}-\\d{4})\\s+(\\d{2}-\\d{2}-\\d{4})$'\n",
+    "    result = re.match(pattern, string)\n",
+    "    return result.groups() if result else [np.nan] * 7\n",
+    "\n",
+    "df1 = pd.DataFrame(map(clean_data, data), columns = header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.equals(df1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -748,6 +850,96 @@
    "source": [
     "###### Ex. Image to text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Using pytesseract\n",
+    "from pytesseract import image_to_string\n",
+    "\n",
+    "text = image_to_string(\"data.png\", lang=\"eng\", config = r'--oem 3 --psm 6')\n",
+    "lines = text.split(\"\\n\")\n",
+    "\n",
+    "header = lines[0].split()\n",
+    "data = [line for line in lines[1:] if re.match(r\"\\d{5}\", line.strip())]\n",
+    "\n",
+    "def clean_data(string) :\n",
+    "    pattern = r'^(\\d+)\\s+(.+?)\\s+([A-Za-z]+)\\s+(Q\\d\\d{2}|FY\\s+\\d{2})\\s+(\\d{2}-\\d{2}-\\d{4})\\s+(\\d{2}-\\d{2}-\\d{4})\\s+(\\d{2}-\\d{2}-\\d{4})$'\n",
+    "    result = re.match(pattern, string)\n",
+    "    return result.groups() if result else [np.nan] * 7\n",
+    "\n",
+    "df2 = pd.DataFrame(map(clean_data, data), columns = header).dropna()\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(columns=[\"PeriodName\"]).iloc[:22].equals(df2.drop(columns=[\"PeriodName\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "C:\\Users\\vaide\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['COID', 'CoName', 'Ticker PeriodName PeriodEndDate FirstFillingDate LatestFillingDate', '10688 Meta Platforms, Inc_', 'META', 'Q1 07', '31-03-2007', '15-04-2007', '15-04-2007', '10688 Meta Platforms, Inc.', 'META', 'Q2 07', '30-06-2007', '15-07-2007', '15-07-2007', '10688 Meta Platforms, Inc_', 'META', 'Q3 07', '30-09-2007', '15-10-2007', '15-10-2007', '10688 Meta Platforms, Inc.', 'META', 'Q4 07', '31-12-2007', '15-01-2008', '15-01-2008', '10688 Meta Platforms, Inc_', 'META', 'FY 07', '31-12-2007', '15-01-2008', '15-01-2008', '10688 Meta Platforms, Inc.', 'META', 'Q1 08', '31-03-2008', '15-04-2008', '15-04-2008', '10688 Meta Platforms, Inc_', 'META', 'Q2 08', '30-06-2008', '15-07-2008', '15-07-2008', '10688 Meta Platforms, Inc_', 'META', 'Q3 08', '30-09-2008', '15-10-2008', '15-10-2008', '10688 Meta Platforms, Inc_', 'META', 'Q4 08', '31-12-2008', '15-01-2009', '15-01-2009', '10688 Meta Platforms, Inc.', 'META', 'FY 08', '31-12-2008', '15-01-2009', '15-01-2009', '10688 Meta Platforms, Inc_', 'META', 'Q1 09', '31-03-2009', '15-04-2009', '15-04-2009', '10688 Meta Platforms, Inc_', 'META', 'Q2 09', '30-06-2009', '15-07-2009', '15-07-2009', '10688 Meta Platforms, Inc_', 'META', 'Q3 09', '30-09-2009', '15-10-2009', '15-10-2009', '10688 Meta Platforms, Inc.', 'META', 'Q4 09', '31-12-2009', '15-01-2010', '15-01-2010', '10688 Meta Platforms, Inc_', 'META', 'FY 09', '31-12-2009', '15-01-2010', '15-01-2010', '10688 Meta Platforms, Inc_', 'META', 'Q1 10', '31-03-2010', '15-04-2010', '15-04-2010', '10688 Meta Platforms, Inc_', 'META', 'Q2 10', '30-06-2010', '15-07-2010', '15-07-2010', '10688 Meta Platforms, Inc.', 'META', 'Q3 10', '30-09-2010', '15-10-2010', '15-10-2010', '10688 Meta Platforms, Inc_', 'META', 'Q4 10', '31-12-2010', '15-01-2011', '15-01-2011', '10688 Meta Platforms, Inc.', 'META', 'FY 10', '31-12-2010', '15-01-2011', '01-02-2013', '10688 Meta Platforms, Inc.', 'META', 'Q111', '31-03-2011', '15-04-2011', '15-04-2011', '10688 Meta Platforms, Inc.', 'META', 'Q2 11', '30-06-2011', '15-07-2011', '15-07-2011', '10688 Meta Platforms', 'Inc.', 'META', '03 11', '30-09-2011', '15-10-2011', '15-10-201']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from easyocr import Reader\n",
+    "\n",
+    "reader = Reader(['en'])\n",
+    "text = reader.readtext(\"data.png\", detail=0)\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -797,13 +989,6 @@
     "```\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
